# course-mgt

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/versions/: 1abcdd7da843_move_is_active_to_user.py  2533ea22893a_add_tables.py
api/: users.py
api/utils/: users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: user.py
