[tool.poetry]
name = "lms"
version = "0.1.0"
description = ""
authors = ["Shakhlyn <shakhlyn.sh.du@gmail.com>"]
readme = "README.md"

SQLALCHEMY_DATABASE_URL ="postgresql+psycopg2://postgres:postgres@localhost/practicedb"
[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
